// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DNS Configuration Will show configuration page when dns info is returned 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mocked-styled-93 el-snack-holder"
      />
      <div
        class="el-mb6 el-form-layout"
      >
        <div
          class="mocked-styled-135 el-input-wrap-full"
        >
          <h2
            class="el-text-base el-subtitle"
          >
            Certificate Status
          </h2>
          <div
            class="el-flex-container el-flex-row el-flex-align-center"
          >
            <span
              class="el-intent-default el-status-indicator"
            />
            <p
              style="text-transform: capitalize;"
            >
              pending
            </p>
          </div>
        </div>
        <div
          class="mocked-styled-135 el-input-wrap-full"
        >
          <h2
            class="el-text-base el-subtitle"
          >
            DNS Validation
          </h2>
          <p
            class="el-text-base el-body-text el-has-grey-text"
          >
            The following 
            <code>
              CNAME
            </code>
             record needs to be added to your domain's DNS settings to verify ownership ownership of the domain so that the SSL certificate can be issued.
          </p>
          <div
            class="el-mb11 el-card-wrap"
          >
            <div
              class="el-mb7 el-grid"
            >
              <div
                class="mocked-styled-31 el-col"
              >
                <div
                  class="el-flex-container"
                >
                  <div>
                    <h2
                      class="el-text-base el-subtitle el-has-no-margin"
                    >
                      Name
                    </h2>
                    <p
                      class="el-text-base el-body-text el-has-grey-text"
                    >
                      dns record name
                    </p>
                  </div>
                </div>
                <button
                  class="el-intent-neutral el-button"
                >
                  <div
                    class="mocked-styled-0 el-button-loader"
                  />
                  Copy
                </button>
              </div>
              <div
                class="mocked-styled-31 el-col"
              >
                <div
                  class="el-flex-container"
                >
                  <div>
                    <h2
                      class="el-text-base el-subtitle el-has-no-margin"
                    >
                      Value
                    </h2>
                    <p
                      class="el-text-base el-body-text el-has-grey-text"
                    >
                      dns record value
                    </p>
                  </div>
                </div>
                <button
                  class="el-intent-neutral el-button"
                >
                  <div
                    class="mocked-styled-0 el-button-loader"
                  />
                  Copy
                </button>
              </div>
            </div>
          </div>
          <h2
            class="el-text-base el-subtitle"
          >
            Custom DNS Records
          </h2>
          <p
            class="el-text-base el-body-text el-has-grey-text"
          >
            The following 
            <code>
              CNAME
            </code>
             record needs to be added to your domain's DNS settings to point your custom domain to the distribution deployed by this pipeline.
          </p>
          <div
            class="el-mb11 el-card-wrap"
          >
            <div
              class="el-mb7 el-grid"
            >
              <div
                class="mocked-styled-31 el-col"
              >
                <div
                  class="el-flex-container"
                >
                  <div>
                    <h2
                      class="el-text-base el-subtitle el-has-no-margin"
                    >
                      Name
                    </h2>
                    <p
                      class="el-text-base el-body-text el-has-grey-text"
                    >
                      https://custom-domain.reapit.cloud
                    </p>
                  </div>
                </div>
                <button
                  class="el-intent-neutral el-button"
                >
                  <div
                    class="mocked-styled-0 el-button-loader"
                  />
                  Copy
                </button>
              </div>
              <div
                class="mocked-styled-31 el-col"
              >
                <div
                  class="el-flex-container"
                >
                  <div>
                    <h2
                      class="el-text-base el-subtitle el-has-no-margin"
                    >
                      Value
                    </h2>
                    <p
                      class="el-text-base el-body-text el-has-grey-text"
                    >
                      dfgdfgdfg.cloudfront.com
                    </p>
                  </div>
                </div>
                <button
                  class="el-intent-neutral el-button"
                >
                  <div
                    class="mocked-styled-0 el-button-loader"
                  />
                  Copy
                </button>
              </div>
            </div>
          </div>
          <div
            class="el-intent-neutral el-is-active el-pn-is-full-width el-pn-is-inline el-persistent-notification"
            role="status"
          >
            <div
              class="el-pn-icon"
              data-testid="close-icon"
            >
              <span
                class="el-icon-new el-icon"
                style="font-size: 1.25rem;"
              >
                <svg
                  fill="none"
                  height="1em"
                  role="img"
                  style="font-size: 1.25rem;"
                  title="Icon image with name info"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10A10 10 0 0 0 12 2m1.143 15.714h-2.286v-6h2.286zm-1.143-8a1.714 1.714 0 1 1 0-3.428 1.714 1.714 0 0 1 0 3.428"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </div>
            <div
              aria-live="polite"
              class="el-pn-content"
            >
              If you are using a 
              <code>
                reapit.cloud
              </code>
               domain, we have automatically sent the above details to DevOps for them action. Once they have merged the DNS changes, the certificate will be issued and the status will update. The custom domain will then be available for use.
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mocked-styled-93 el-snack-holder"
    />
    <div
      class="el-mb6 el-form-layout"
    >
      <div
        class="mocked-styled-135 el-input-wrap-full"
      >
        <h2
          class="el-text-base el-subtitle"
        >
          Certificate Status
        </h2>
        <div
          class="el-flex-container el-flex-row el-flex-align-center"
        >
          <span
            class="el-intent-default el-status-indicator"
          />
          <p
            style="text-transform: capitalize;"
          >
            pending
          </p>
        </div>
      </div>
      <div
        class="mocked-styled-135 el-input-wrap-full"
      >
        <h2
          class="el-text-base el-subtitle"
        >
          DNS Validation
        </h2>
        <p
          class="el-text-base el-body-text el-has-grey-text"
        >
          The following 
          <code>
            CNAME
          </code>
           record needs to be added to your domain's DNS settings to verify ownership ownership of the domain so that the SSL certificate can be issued.
        </p>
        <div
          class="el-mb11 el-card-wrap"
        >
          <div
            class="el-mb7 el-grid"
          >
            <div
              class="mocked-styled-31 el-col"
            >
              <div
                class="el-flex-container"
              >
                <div>
                  <h2
                    class="el-text-base el-subtitle el-has-no-margin"
                  >
                    Name
                  </h2>
                  <p
                    class="el-text-base el-body-text el-has-grey-text"
                  >
                    dns record name
                  </p>
                </div>
              </div>
              <button
                class="el-intent-neutral el-button"
              >
                <div
                  class="mocked-styled-0 el-button-loader"
                />
                Copy
              </button>
            </div>
            <div
              class="mocked-styled-31 el-col"
            >
              <div
                class="el-flex-container"
              >
                <div>
                  <h2
                    class="el-text-base el-subtitle el-has-no-margin"
                  >
                    Value
                  </h2>
                  <p
                    class="el-text-base el-body-text el-has-grey-text"
                  >
                    dns record value
                  </p>
                </div>
              </div>
              <button
                class="el-intent-neutral el-button"
              >
                <div
                  class="mocked-styled-0 el-button-loader"
                />
                Copy
              </button>
            </div>
          </div>
        </div>
        <h2
          class="el-text-base el-subtitle"
        >
          Custom DNS Records
        </h2>
        <p
          class="el-text-base el-body-text el-has-grey-text"
        >
          The following 
          <code>
            CNAME
          </code>
           record needs to be added to your domain's DNS settings to point your custom domain to the distribution deployed by this pipeline.
        </p>
        <div
          class="el-mb11 el-card-wrap"
        >
          <div
            class="el-mb7 el-grid"
          >
            <div
              class="mocked-styled-31 el-col"
            >
              <div
                class="el-flex-container"
              >
                <div>
                  <h2
                    class="el-text-base el-subtitle el-has-no-margin"
                  >
                    Name
                  </h2>
                  <p
                    class="el-text-base el-body-text el-has-grey-text"
                  >
                    https://custom-domain.reapit.cloud
                  </p>
                </div>
              </div>
              <button
                class="el-intent-neutral el-button"
              >
                <div
                  class="mocked-styled-0 el-button-loader"
                />
                Copy
              </button>
            </div>
            <div
              class="mocked-styled-31 el-col"
            >
              <div
                class="el-flex-container"
              >
                <div>
                  <h2
                    class="el-text-base el-subtitle el-has-no-margin"
                  >
                    Value
                  </h2>
                  <p
                    class="el-text-base el-body-text el-has-grey-text"
                  >
                    dfgdfgdfg.cloudfront.com
                  </p>
                </div>
              </div>
              <button
                class="el-intent-neutral el-button"
              >
                <div
                  class="mocked-styled-0 el-button-loader"
                />
                Copy
              </button>
            </div>
          </div>
        </div>
        <div
          class="el-intent-neutral el-is-active el-pn-is-full-width el-pn-is-inline el-persistent-notification"
          role="status"
        >
          <div
            class="el-pn-icon"
            data-testid="close-icon"
          >
            <span
              class="el-icon-new el-icon"
              style="font-size: 1.25rem;"
            >
              <svg
                fill="none"
                height="1em"
                role="img"
                style="font-size: 1.25rem;"
                title="Icon image with name info"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10A10 10 0 0 0 12 2m1.143 15.714h-2.286v-6h2.286zm-1.143-8a1.714 1.714 0 1 1 0-3.428 1.714 1.714 0 0 1 0 3.428"
                  fill="currentColor"
                />
              </svg>
            </span>
          </div>
          <div
            aria-live="polite"
            class="el-pn-content"
          >
            If you are using a 
            <code>
              reapit.cloud
            </code>
             domain, we have automatically sent the above details to DevOps for them action. Once they have merged the DNS changes, the certificate will be issued and the status will update. The custom domain will then be available for use.
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`DNS Configuration Will show setup domain model component 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mocked-styled-93 el-snack-holder"
      />
      <div
        class="el-mb6"
      >
        <p
          class="el-text-base el-body-text el-has-grey-text"
        >
          To use a custom domain, you'll need to start this process by using the button below. Once you've created, you'll need to inform dev ops to configure your DNS with the details provided by the IaaS platform.
        </p>
      </div>
      <button
        class="el-intent-primary el-button"
      >
        <div
          class="mocked-styled-0 el-button-loader"
        />
        Setup Custom DNS
      </button>
    </div>
  </body>,
  "container": <div>
    <div
      class="mocked-styled-93 el-snack-holder"
    />
    <div
      class="el-mb6"
    >
      <p
        class="el-text-base el-body-text el-has-grey-text"
      >
        To use a custom domain, you'll need to start this process by using the button below. Once you've created, you'll need to inform dev ops to configure your DNS with the details provided by the IaaS platform.
      </p>
    </div>
    <button
      class="el-intent-primary el-button"
    >
      <div
        class="mocked-styled-0 el-button-loader"
      />
      Setup Custom DNS
    </button>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
